# windchill-plm

./: .gitignore  AGENT_NOTES.md  CHANGELOG.md  FEATURE_PROPOSALS.md  LICENSE  NOTICE  README.md  ROADMAP.md  SKILL.md  config.example.json  config.json.backup  pyproject.toml
references/: API_REFERENCE.md  CADDocumentMgmt_Entities.json  CADDocumentMgmt_METADATA.xml  CADDocumentMgmt_Navigations.md  CADDocumentMgmt_REFERENCE.md  CAPABILITIES.md  CEM_Entities.json  CEM_METADATA.xml  CEM_Navigations.md  CEM_REFERENCE.md  ChangeMgmt_Entities.json  ChangeMgmt_Navigations.md  ChangeMgmt_REFERENCE.md  Common_PTC_Entities.json  Common_PTC_Entities.md  DOMAIN_CLIENT_GUIDE.md  DataAdmin_Entities.json  DataAdmin_Metadata.xml  DataAdmin_Navigations.md  DataAdmin_REFERENCE.md  DocMgmt_Entities.json  DocMgmt_Metadata.xml  DocMgmt_Navigations.md  DocMgmt_REFERENCE.md  MfgProcMgmt_Entities.json  MfgProcMgmt_Navigations.md  MfgProcMgmt_REFERENCE.md  PTC_REFERENCE.md  PrincipalMgmt_Entities.json  PrincipalMgmt_Navigations.md  PrincipalMgmt_REFERENCE.md  ProdMgmt_Entities.json  ProdMgmt_Metadata.xml  ProdMgmt_Navigations.md  ProdMgmt_REFERENCE.md  QMS_Entities.json  QMS_Navigations.md  QMS_REFERENCE.md  README.md  RegMstr_Entities.json  (+10 more)
scripts/: async_query_manager.py  cache_manager.py  create_document.py  create_folder.py  create_part.py  create_supplier.py  delete_folder.py  explore_windchill.py  fetch_caddocmgmt_schema.py  fetch_cem_schema.py  fetch_dataadmin_schema.py  fetch_docmgmt_schema.py  fetch_domains.py  fetch_prodmgmt_metadata.py  fetch_supplier_metadata.py  find_document.py  (+46 more)
(+200 files in other folders)
